--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
-tipos-variaveis/.vscode/settings.json
-smart-tv/.vscode/settings.json
-java-terminal/.vscode/settings.json
+# Compiled class file
 *.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+/.vscode
+settings.json
